# krust

./: Cargo.toml  KNOWN_ISSUES.md  NOTICE  README.md  StackBuild.md  TASKBOARD.md  base16-to-tmtheme.mjs  config.example.toml  config.template.toml  flake.nix  krust-test.md  release.sh
.ferrite/: state.json
src/: app.rs  config.rs  main.rs  state.rs
src/tree/: component.rs  file_ops.rs  mod.rs  navigation.rs  search.rs  tree_node.rs
tmthemes/: Arc Light.tmTheme  Ayu Light.tmTheme  Ayu Mirage.tmTheme  Everblush.tmTheme  Everforest Dark Hard.tmTheme  Everforest Light Hard.tmTheme  Flexoki Dark.tmTheme  Flexoki Light.tmTheme  Gotham.tmTheme  Harper.tmTheme  Hemisu Dark.tmTheme  Hemisu Light.tmTheme  Jup.tmTheme  Kanagawa Dragon.tmTheme  Kanagawa Lotus.tmTheme  Kanagawa Wave.tmTheme  Lunaria Eclipse.tmTheme  Lunaria Light.tmTheme  Modus Operandi Tinted.tmTheme  Modus Operandi.tmTheme  Modus Vivendi Tinted.tmTheme  Modus Vivendi.tmTheme  Monokai Pro Light Sun.tmTheme  Monokai Pro Light.tmTheme  Monokai Pro Ristretto.tmTheme  Nord Light.tmTheme  Novel.tmTheme  Oceanic Next.tmTheme  One Light.tmTheme  Paper.tmTheme  Papercolor Dark.tmTheme  Papercolor Light.tmTheme  Pencil Dark.tmTheme  Pencil Light.tmTheme  Relaxed.tmTheme  Rosé Pine Dawn.tmTheme  Rosé Pine Moon.tmTheme  Sat.tmTheme  Sea Shells.tmTheme  Selenized Dark.tmTheme  (+23 more)
